# ECW-2022-MINIFILTER

./: .gitignore  CMakeLists.txt  README.md  build.ps1
cmake/: ClangFormat.cmake  FindWdk.cmake  Sign.cmake
kapp/: CMakeLists.txt
kapp/include/: main.h
kapp/src/: main.cpp
klib/: CMakeLists.txt
klib/include/: FilterFileNameInformation.h  Lock.h  main.h  version.h
klib/include/public/: kl.h
klib/src/: FilterFileNameInformation.cpp  Lock.cpp  version.cpp
scripts/: decode.py  load.ps1  test.ps1  unload.ps1
scripts/Debug/: kapp.inf  kapp.sys
scripts/secret/: original.txt
uapp/: CMakeLists.txt  main.c
